some routes added

--- a/src/app/shared/components/nav-sidebar/nav-sidebar.component.html
+++ b/src/app/shared/components/nav-sidebar/nav-sidebar.component.html
@@ -8,11 +8,7 @@
 		'border-radius': '0.5em'
 	}"
 >
-	<h3>Sidebar</h3>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-		veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-		commodo consequat.
-	</p>
+	<div class="flex justify-content-center">
+		<p-menu [model]="modules"></p-menu>
+	</div>
 </p-sidebar>
